2008-02-09  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcurveview.c (gimp_curve_view_draw_point): cleanup.

2008-02-09  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcurveview.[ch]: port internal cursor stuff to
	gdouble, fix off-by-one in curve drawing, fix drawing artefact in
	handle drawing by starting drawing on the handle's outline and not
	its center.

2008-02-09  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcurveview.[ch]: port the "xpos" API
	to [0.0..1.0] doubles too.

	* app/tools/gimpcurvestool.[ch]: rename "col_value" member to
	"picked_color" and use gdouble instead of gint. Also use GimpCurve
	API to map the values instead of accessing the curve directly.
	Fixes setting curve anchor points by color picking.

2008-02-09  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpcurve.[ch]: changed all values to be [0.0..1.0]
	doubles instead of [0..255] integers. Also changed the API to use
	doubles instead of ints. Still have the fixed-size arrays though.

	(gimp_curve_map): new function to map values.

	* app/gegl/gimpoperationcurves.c: remove private map() function
	and use the one from GimpCurve.

	* app/gegl/gimpcurvesconfig.c
	* app/core/gimpdrawable-curves.c: port to the new gdouble API.

	* app/tools/gimpcurvestool.c: use gimp_curve_get_uchar() to get
	the arrays for the color bars.

	* app/widgets/gimpcurveview.[ch]: port to gdouble and some cleanup.

2008-02-08  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimptexteditor.c: use an entry with completion for
	language selection. Still not functional.

2008-02-08  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimplanguagestore.[ch]
	* app/widgets/gimplanguagestore-parser.c: actually populate the
	language store. Still work in progress...

	* app/widgets/gimptexteditor.c: added a combo-box for language
	selection. Not functional yet; just something to play with.

2008-02-08  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimplanguagestore-parser.c: implemented the parser.
