@@ -315,8 +315,8 @@ gimp_curve_view_draw_point (GimpCurveView *view,
 {
   gdouble x, y;
 
-  x =       view->curve->points[i][0];
-  y = 1.0 - view->curve->points[i][1];
+  x =       view->curve->points[i].x;
+  y = 1.0 - view->curve->points[i].y;
 
   if (x < 0.0)
     return;
@@ -553,17 +553,17 @@ gimp_curve_view_button_press (GtkWidget      *widget,
       /*  determine the leftmost and rightmost points  */
       view->leftmost = -1.0;
       for (i = closest_point - 1; i >= 0; i--)
-        if (curve->points[i][0] >= 0.0)
+        if (curve->points[i].x >= 0.0)
           {
-            view->leftmost = curve->points[i][0];
+            view->leftmost = curve->points[i].x;
             break;
           }
 
       view->rightmost = 2.0;
       for (i = closest_point + 1; i < GIMP_CURVE_NUM_POINTS; i++)
-        if (curve->points[i][0] >= 0.0)
+        if (curve->points[i].x >= 0.0)
           {
-            view->rightmost = curve->points[i][0];
+            view->rightmost = curve->points[i].x;
             break;
           }
 
@@ -635,7 +635,7 @@ gimp_curve_view_motion_notify (GtkWidget      *widget,
     case GIMP_CURVE_SMOOTH:
       if (! view->grabbed) /*  If no point is grabbed...  */
         {
-          if (curve->points[closest_point][0] >= 0.0)
+          if (curve->points[closest_point].x >= 0.0)
             new_cursor = GDK_FLEUR;
           else
             new_cursor = GDK_TCROSS;
@@ -651,7 +651,7 @@ gimp_curve_view_motion_notify (GtkWidget      *widget,
           if (x > view->leftmost && x < view->rightmost)
             {
               closest_point = ((gint) (x * 255.999) + 8) / 16;
-              if (curve->points[closest_point][0] < 0.0)
+              if (curve->points[closest_point].x < 0.0)
                 gimp_curve_view_set_selected (view, closest_point);
 
               gimp_curve_set_point (curve, view->selected, x, 1.0 - y);
@@ -737,7 +737,7 @@ gimp_curve_view_key_press (GtkWidget   *widget,
   GimpCurveView *view   = GIMP_CURVE_VIEW (widget);
   GimpCurve     *curve  = view->curve;
   gint           i      = view->selected;
-  gdouble        y      = curve->points[i][1];
+  gdouble        y      = curve->points[i].y;
   gboolean       retval = FALSE;
 
   if (view->grabbed || ! curve ||
@@ -749,7 +749,7 @@ gimp_curve_view_key_press (GtkWidget   *widget,
     case GDK_Left:
       for (i = i - 1; i >= 0 && ! retval; i--)
         {
-          if (curve->points[i][0] >= 0.0)
+          if (curve->points[i].x >= 0.0)
             {
               gimp_curve_view_set_selected (view, i);
 
@@ -761,7 +761,7 @@ gimp_curve_view_key_press (GtkWidget   *widget,
     case GDK_Right:
       for (i = i + 1; i < GIMP_CURVE_NUM_POINTS && ! retval; i++)
         {
-          if (curve->points[i][0] >= 0.0)
+          if (curve->points[i].x >= 0.0)
             {
               gimp_curve_view_set_selected (view, i);
 
